<resources>
    <string name="app_name">My Application</string>
    <string name="ecose">ecose</string>
    <string name="olvidaste_tu_contrasena">¿Olvidaste tu Contraseña?</string>
    <string name="no_tienes_cuenta_reg_strate_aqu">¿No tienes cuenta? Regístrate aquí</string>
    <string name="log_in">Log In</string>
    <string name="registro">Registro</string>
    <string name="correo">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login">Login</string>
    <string name="referidos">Referidos</string>
    <string name="cuenta">Cuenta</string>
    <string name="nosotros">Nosotros</string>
    <string name="home">Home</string>
    <string name="ranking">Ranking</string>
    <string name="title_activity_maps_locations">Map</string>
</resources>
