<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ecoseMainColor"
    tools:context=".MainActivity"
    android:id="@+id/rootLayout">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/big_fish"
        android:text="@string/ecose"
        android:textColor="@color/ecoseMainWhite"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/olvidaste_tu_contrasena"
        android:textColor="@color/ecoseMainWhite"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:theme="@style/editTextStyle"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        tools:layout_editor_absoluteX="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=" Contraseña"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/ecoseMainWhite"
            android:textColorHint="@color/ecoseMainWhite"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:theme="@style/editTextStyle"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=" Correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/ecoseMainWhite"
            android:textColorHint="@color/ecoseMainWhite"
            android:fontFamily="@font/poppins_bold"
            android:drawableLeft="@drawable/ic_mail_outline_black_24dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:width="200dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/log_in"
        android:textColor="@color/ecoseMainColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:layout_constraintVertical_bias="0.758" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerButton"
        android:text="@string/no_tienes_cuenta_reg_strate_aqu"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        android:textColor="@color/ecoseMainWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:layout_constraintVertical_bias="0.775" />





</androidx.constraintlayout.widget.ConstraintLayout>